--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "velvet---hyper-personalization-engine",
+  "name": "velvet-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "0.1.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "@google/genai": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
